  still disable it. [SW]
 * The newline_one_char config option has been removed -- %r now always 
   returns a single-char newline (\n). [MG]

Minor changes:
 * crunch_code and crypt_code in funcrypt.c are no longer static. Requested
   by qa'toq@M*U*S*H. [MG]
 * @dump now notifies the executor when the dump is complete. Suggested by
   Padraic. [MG]

Fixes:
 * @lock/infilter, not @lock/infitler. [SW]
 * @shutdown/reboot handles failed database saves much more gracefully.
   [SW]
 * Help fixes by Wiggles. [MG]
 * Fix a few places that could trigger an integer division exception.
   Reported by Ashen-Shugar. [SW]
 * A number of places in the hardcode incorrectly took TINY_MATH into account
   when deciding if something was a valid number or not. From a report by
   Daniel Powell. [MG]

Functions:
 * isregexp() to validate regexp patterns. Suggested by Padraic. [DC]

Version 1.8.4 patchlevel 7                                 Sep 25, 2011

Deprecation:
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]
 * @doing is now deprecated (see below).
 * The "newline_one_char" mush.cnf option is now deprecated, and will soon
   always be "Yes". If you have it set to No and have any code that assumes
   strlen(%r) == 2, you should change it now. [MG]

Major changes:
 * DOING is now a standard attribute. Your @doing can be any length, and
   doing() returns the whole string (though it will still be truncated when
   displayed on WHO), can contain ANSI and will be evaluated each time it's 
   displayed, allowing for random/rotating doings. The @doing command will
   escape its input before setting into an attribute, for backwards
   compatability, but is now deprecated; use &doing to store code. [MG]
 * All objects with the same flags or powers set share the same
   storage for those flags. Large games should see slightly reduced memory
   use. Suggested by [GM]. [SW]

Minor changes:
 * Rewrite memcheck allocation tracking to use a more efficient data