@@ -454,23 +454,16 @@ reset_cpu_timer(void)
 /** System queue stuff. Timed events like dbcks and purges are handled
  *  through this system. */
 
-struct squeue {
-  sq_func fun;
-  void *data;
-  time_t when;
-  char *event;
-  struct squeue *next;
-};
-
 struct squeue *sq_head = NULL;
 
 /** Register a callback function to be executed at a certain time.
- *  \param w when to run the event
- *  \param f the callback function
- *  \param d data to pass to the callback
- *  \param ev Softcode event to trigger at the same time.
+ * \param w when to run the event
+ * \param f the callback function
+ * \param d data to pass to the callback
+ * \param ev Softcode event to trigger at the same time.
+ * \return pointer to the newly added squeue
  */
-void
+struct squeue *
 sq_register(time_t w, sq_func f, void *d, const char *ev)
 {
   struct squeue *sq;
@@ -497,10 +490,39 @@ sq_register(time_t w, sq_func f, void *d, const char *ev)
       if (difftime(w, c->when) <= 0) {
         sq->next = c;
         prev->next = sq;
-        return;
+        return sq;
       }
     }
     prev->next = sq;
+  }
+
+  return sq;
+}
+
+/** Cancel an entry in the system queue.
+ * \param sq systen queue entry to cancel
+ */
+void
+sq_cancel(struct squeue *sq)
+{
+  struct squeue *tmp, *prev = NULL;
+
+  if (!sq)
+    return;
+
+  /* Remove from list */
+  for (tmp = sq_head; tmp; tmp = tmp->next) {
+    if (tmp == sq) {
+      if (prev)
+        prev->next = tmp->next;
+      else
+        sq_head = tmp->next;
+      if (sq->event)
+        mush_free(sq->event, "squeue.event");
+      mush_free(sq, "squeue.node");
+      return;
+    }
+    prev = tmp;
   }
 }
 
@@ -509,13 +531,14 @@ sq_register(time_t w, sq_func f, void *d, const char *ev)
  * \param f the callback function.
  * \param d data to pass to the callback.
  * \param ev softcode event to trigger at the same time.
+ * \return pointer to the newly added squeue
  */
-void
+struct squeue *
 sq_register_in(int n, sq_func f, void *d, const char *ev)
 {
   time_t now;
   time(&now);
-  sq_register(now + n, f, d, ev);
+  return sq_register(now + n, f, d, ev);
 }
 
 /** A timed event that runs on a loop */
